crates/parser/tests/cases/snapshots/cases__parse_ast__expr_path_call.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_path_call), expressions::parse_expr,\n           \"foo::bar::abc1()\")"

---
Node(
  kind: Call(
    func: Node(
      kind: Path(Path(
        segments: [
          Node(
            kind: "foo",
            span: Span(
              start: 0,
              end: 3,
            ),
          ),
          Node(
            kind: "bar",
            span: Span(
              start: 5,
              end: 8,
            ),
          ),
          Node(
            kind: "abc1",
            span: Span(
              start: 10,
              end: 14,
            ),
          ),
        ],
      )),
      span: Span(
        start: 0,
        end: 14,
      ),
    ),
    generic_args: None,
    args: Node(
      kind: [],
      span: Span(
        start: 14,
        end: 16,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 16,
  ),
)
