crates/parser/tests/cases/snapshots/cases__parse_ast__expr_string.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_string), expressions::parse_expr,\n           r#\"\"hi \\tmom\\n\"\"#)"

---
Node(
  kind: Str("hi \tmom\n"),
  span: Span(
    start: 0,
    end: 12,
  ),
)
