crates/parser/tests/cases/snapshots/cases__parse_ast__expr_ternary.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_ternary), expressions::parse_expr,\n           \"x + 1 if y + 2 else z + 3\")"

---
Node(
  kind: Ternary(
    if_expr: Node(
      kind: BinOperation(
        left: Node(
          kind: Name("x"),
          span: Span(
            start: 0,
            end: 1,
          ),
        ),
        op: Node(
          kind: Add,
          span: Span(
            start: 2,
            end: 3,
          ),
        ),
        right: Node(
          kind: Num("1"),
          span: Span(
            start: 4,
            end: 5,
          ),
        ),
      ),
      span: Span(
        start: 0,
        end: 5,
      ),
    ),
    test: Node(
      kind: BinOperation(
        left: Node(
          kind: Name("y"),
          span: Span(
            start: 9,
            end: 10,
          ),
        ),
        op: Node(
          kind: Add,
          span: Span(
            start: 11,
            end: 12,
          ),
        ),
        right: Node(
          kind: Num("2"),
          span: Span(
            start: 13,
            end: 14,
          ),
        ),
      ),
      span: Span(
        start: 9,
        end: 14,
      ),
    ),
    else_expr: Node(
      kind: BinOperation(
        left: Node(
          kind: Name("z"),
          span: Span(
            start: 20,
            end: 21,
          ),
        ),
        op: Node(
          kind: Add,
          span: Span(
            start: 22,
            end: 23,
          ),
        ),
        right: Node(
          kind: Num("3"),
          span: Span(
            start: 24,
            end: 25,
          ),
        ),
      ),
      span: Span(
        start: 20,
        end: 25,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 25,
  ),
)
