crates/parser/tests/cases/snapshots/cases__parse_ast__expr_tuple2.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_tuple2), expressions::parse_expr, \"(1, 2, \\n 3)\")"

---
Node(
  kind: Tuple(
    elts: [
      Node(
        kind: Num("1"),
        span: Span(
          start: 1,
          end: 2,
        ),
      ),
      Node(
        kind: Num("2"),
        span: Span(
          start: 4,
          end: 5,
        ),
      ),
      Node(
        kind: Num("3"),
        span: Span(
          start: 9,
          end: 10,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 11,
  ),
)
