crates/parser/tests/cases/snapshots/cases__parse_ast__expr_unit.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_unit), expressions::parse_expr, \"()\")"

---
Node(
  kind: Unit,
  span: Span(
    start: 0,
    end: 2,
  ),
)
