crates/parser/tests/cases/snapshots/cases__parse_ast__fn_def_pub.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(fn_def_pub), try_parse_module,\n           \"pub fn foo21(x: bool, y: address,) -> bool { x }\")"

---
Node(
  kind: Module(
    body: [
      Function(Node(
        kind: Function(
          pub_: Some(Span(
            start: 0,
            end: 3,
          )),
          unsafe_: None,
          name: Node(
            kind: "foo21",
            span: Span(
              start: 7,
              end: 12,
            ),
          ),
          generic_params: Node(
            kind: [],
            span: Span(
              start: 7,
              end: 12,
            ),
          ),
          args: [
            Node(
              kind: Regular(
                mut_: None,
                label: None,
                name: Node(
                  kind: "x",
                  span: Span(
                    start: 13,
                    end: 14,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "bool",
                  ),
                  span: Span(
                    start: 16,
                    end: 20,
                  ),
                ),
              ),
              span: Span(
                start: 13,
                end: 20,
              ),
            ),
            Node(
              kind: Regular(
                mut_: None,
                label: None,
                name: Node(
                  kind: "y",
                  span: Span(
                    start: 22,
                    end: 23,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "address",
                  ),
                  span: Span(
                    start: 25,
                    end: 32,
                  ),
                ),
              ),
              span: Span(
                start: 22,
                end: 32,
              ),
            ),
          ],
          return_type: Some(Node(
            kind: Base(
              base: "bool",
            ),
            span: Span(
              start: 38,
              end: 42,
            ),
          )),
          body: [
            Node(
              kind: Expr(
                value: Node(
                  kind: Name("x"),
                  span: Span(
                    start: 45,
                    end: 46,
                  ),
                ),
              ),
              span: Span(
                start: 45,
                end: 46,
              ),
            ),
          ],
        ),
        span: Span(
          start: 0,
          end: 48,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 48,
  ),
)
