crates/parser/tests/cases/snapshots/cases__parse_ast__fn_def_unsafe.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(fn_def_unsafe), try_parse_module,\n           \"unsafe fn foo21(x: bool, y: address,) -> bool {\\n x\\n}\")"

---
Node(
  kind: Module(
    body: [
      Function(Node(
        kind: Function(
          pub_: None,
          unsafe_: Some(Span(
            start: 0,
            end: 6,
          )),
          name: Node(
            kind: "foo21",
            span: Span(
              start: 10,
              end: 15,
            ),
          ),
          generic_params: Node(
            kind: [],
            span: Span(
              start: 10,
              end: 15,
            ),
          ),
          args: [
            Node(
              kind: Regular(
                mut_: None,
                label: None,
                name: Node(
                  kind: "x",
                  span: Span(
                    start: 16,
                    end: 17,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "bool",
                  ),
                  span: Span(
                    start: 19,
                    end: 23,
                  ),
                ),
              ),
              span: Span(
                start: 16,
                end: 23,
              ),
            ),
            Node(
              kind: Regular(
                mut_: None,
                label: None,
                name: Node(
                  kind: "y",
                  span: Span(
                    start: 25,
                    end: 26,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "address",
                  ),
                  span: Span(
                    start: 28,
                    end: 35,
                  ),
                ),
              ),
              span: Span(
                start: 25,
                end: 35,
              ),
            ),
          ],
          return_type: Some(Node(
            kind: Base(
              base: "bool",
            ),
            span: Span(
              start: 41,
              end: 45,
            ),
          )),
          body: [
            Node(
              kind: Expr(
                value: Node(
                  kind: Name("x"),
                  span: Span(
                    start: 49,
                    end: 50,
                  ),
                ),
              ),
              span: Span(
                start: 49,
                end: 50,
              ),
            ),
          ],
        ),
        span: Span(
          start: 0,
          end: 52,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 52,
  ),
)
